# haskellings

./: CHANGELOG.md  haskellings.cabal
app/: Main.hs
exercises/01_hello_world/: Main.hs
exercises/02_addition/: Main.hs
src/: Watcher.hs
